task-module_1.1/src/main/java/taskmodule/conglogcompiler/ConGlogParser.java
// $ANTLR 3.2 Sep 23, 2009 14:05:07 C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g 2010-04-29 16:55:00

	package taskmodule.conglogcompiler;
	import java.util.Map; 
	import java.util.HashMap;
	import java.util.UUID;
	import taskmodule.task.Task;
	import taskmodule.preconditions.bool.*;
	import taskmodule.preconditions.integer.*;
	import taskmodule.preconditions.var.*;
	import taskmodule.util.Tree;
	import taskmodule.TaskModule;
	import taskmodule.ITaskModule;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class ConGlogParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEGATION", "IDENT", "INTEGER", "EMPTY", "LETTER", "DIGIT", "NEWLINE", "WHITESPACE", "IGNORE", "COMMENT", "MULTILINE_COMMENT", "'Precondition-axioms'", "'('", "')'", "'='", "';'", "'true'", "'false'", "'+'", "'-'", "'*'", "'/'", "'mod'", "'!='", "'<'", "'<='", "'>'", "'>='", "'not'", "'&&'", "'||'", "'{'", "'}'", "'['", "'|'", "']'", "'?'", "'Label'", "':'"
    };
    public static final int INTEGER=6;
    public static final int T__42=42;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int LETTER=8;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int WHITESPACE=11;
    public static final int IGNORE=12;
    public static final int EOF=-1;
    public static final int EMPTY=7;
    public static final int T__19=19;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int MULTILINE_COMMENT=14;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__16=16;
    public static final int T__34=34;
    public static final int T__15=15;
    public static final int NEWLINE=10;
    public static final int NEGATION=4;
    public static final int T__35=35;
    public static final int T__18=18;
    public static final int T__36=36;
    public static final int T__17=17;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int IDENT=5;
    public static final int DIGIT=9;
    public static final int COMMENT=13;

    // delegates
    // delegators


        public ConGlogParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ConGlogParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return ConGlogParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g"; }


      private Map<String, IPreCondition> preconditionAxioms = new HashMap<String, IPreCondition>();
      private ITaskModule taskModule = TaskModule.getInstance();
      
      private ICompilerErrorReporter syntaxErrorReporter = new CompilerErrorReporter();
      private ICompilerErrorReporter semanticsErrorReporter = new CompilerErrorReporter();
      
      private boolean phase2 = false;
      private Map<String, Tree<String>> labels = new HashMap<String, Tree<String>>();
      private Map<Tree<String>, IPreCondition> dynamicConditions = new HashMap<Tree<String>, IPreCondition>();
      
      public void setSyntaxErrorReporter(ICompilerErrorReporter syntaxErrorReporter) {
      	this.syntaxErrorReporter = syntaxErrorReporter;
      }
      
      public void setSemanticErrorReporter(ICompilerErrorReporter semanticsErrorReporter) {
      	this.semanticsErrorReporter = semanticsErrorReporter;
      }
      
      public void emitErrorMessage(String msg) {
      	syntaxErrorReporter.reportError(msg);
      }
      
      public void checkTypeInt(IPreCondition variable) {
          if (null == variable) return; //Living these cases to be handles by the Syntactic check
          if (!(IIntPreCondition.class.isAssignableFrom(variable.getClass()))) {
            semanticsErrorReporter.reportError("Error in expression - invalid operation on type Integer"); 
          }
      }
      
      public void checkTypeBool(IPreCondition variable) {
          if (null == variable) return; //Living these cases to be handles by the Syntactic check
          if (!(IBoolPreCondition.class.isAssignableFrom(variable.getClass()))) {
            semanticsErrorReporter.reportError("Error in expression - invalid operation on type Boolean");
          }
      }
      
      public void checkSimilarity(IPreCondition var1, IPreCondition var2) {
          if (null == var1 || null == var2) return; //Living these cases to be handles by the Syntactic check
          if (!((IBoolPreCondition.class.isAssignableFrom(var1.getClass()) && 
                 IBoolPreCondition.class.isAssignableFrom(var2.getClass())) ||
               (IIntPreCondition.class.isAssignableFrom(var1.getClass()) && 
                IIntPreCondition.class.isAssignableFrom(var2.getClass())))) {
             semanticsErrorReporter.reportError("Error in expression - invalid operation on mixed types");   
          }
      }



    // $ANTLR start "program"
    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:77:1: program returns [ Task task ] : ( precondition )* statement EOF ;
    public final Task program() throws RecognitionException {
        Task task = null;

        Tree<String> statement1 = null;


        try {
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:78:2: ( ( precondition )* statement EOF )
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:78:4: ( precondition )* statement EOF
            {
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:78:4: ( precondition )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==15) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:78:4: precondition
            	    {
            	    pushFollow(FOLLOW_precondition_in_program57);
            	    precondition();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

             phase2 = true; 
            pushFollow(FOLLOW_statement_in_program62);
            statement1=statement();

            state._fsp--;

            match(input,EOF,FOLLOW_EOF_in_program64); 

            		task = new Task(statement1,preconditionAxioms, dynamicConditions);
            	

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return task;
    }
    // $ANTLR end "program"


    // $ANTLR start "precondition"
    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:84:1: precondition : 'Precondition-axioms' '(' activity ')' '=' expression ';' ;
    public final void precondition() throws RecognitionException {
        String activity2 = null;

        IPreCondition expression3 = null;


        try {
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:85:2: ( 'Precondition-axioms' '(' activity ')' '=' expression ';' )
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:85:4: 'Precondition-axioms' '(' activity ')' '=' expression ';'
            {
            match(input,15,FOLLOW_15_in_precondition80); 
            match(input,16,FOLLOW_16_in_precondition82); 
            pushFollow(FOLLOW_activity_in_precondition84);
            activity2=activity();

            state._fsp--;

            match(input,17,FOLLOW_17_in_precondition86); 
            match(input,18,FOLLOW_18_in_precondition88); 
            pushFollow(FOLLOW_expression_in_precondition90);
            expression3=expression();

            state._fsp--;

            match(input,19,FOLLOW_19_in_precondition92); 

            		if (!preconditionAxioms.containsKey(activity2)) {
            			preconditionAxioms.put(activity2,expression3);
            		}
            		else {
            			semanticsErrorReporter.reportError("Precondition for '" + activity2 + 
            					" already defined");
            		}
            	

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "precondition"


    // $ANTLR start "term"
    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:97:1: term returns [ IPreCondition condition ] : ( IDENT | '(' expression ')' | INTEGER | 'true' | 'false' );
    public final IPreCondition term() throws RecognitionException {
        IPreCondition condition = null;

        Token IDENT4=null;
        Token INTEGER6=null;
        IPreCondition expression5 = null;


        try {
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:98:2: ( IDENT | '(' expression ')' | INTEGER | 'true' | 'false' )
            int alt2=5;
            switch ( input.LA(1) ) {
            case IDENT:
                {
                alt2=1;
                }
                break;
            case 16:
                {
                alt2=2;
                }
                break;
            case INTEGER:
                {
                alt2=3;
                }
                break;
            case 20:
                {
                alt2=4;
                }
                break;
            case 21:
                {
                alt2=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:98:4: IDENT
                    {
                    IDENT4=(Token)match(input,IDENT,FOLLOW_IDENT_in_term111); 
                     if (taskModule.getIntVariableSet().contains((IDENT4!=null?IDENT4.getText():null))) {
                    	                    condition = new IntVariable((IDENT4!=null?IDENT4.getText():null));
                    	                }
                    	                else if (taskModule.getBoolVariableSet().contains((IDENT4!=null?IDENT4.getText():null))) {
                    	                    condition = new BoolVariable((IDENT4!=null?IDENT4.getText():null));
                    	                }
                    	                else {
                    								      semanticsErrorReporter.reportError("Unsupported " + 
                    										      "variable: " + (IDENT4!=null?IDENT4.getText():null)); 
                    							    }
                                    

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:109:4: '(' expression ')'
                    {
                    match(input,16,FOLLOW_16_in_term121); 
                    pushFollow(FOLLOW_expression_in_term123);
                    expression5=expression();

                    state._fsp--;

                    match(input,17,FOLLOW_17_in_term125); 
                     condition = expression5; 

                    }
                    break;
                case 3 :
                    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:110:4: INTEGER
                    {
                    INTEGER6=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_term138); 
                     condition = new IntPreCondition(Integer.parseInt((INTEGER6!=null?INTEGER6.getText():null))); 

                    }
                    break;
                case 4 :
                    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:111:4: 'true'
                    {
                    match(input,20,FOLLOW_20_in_term148); 
                     condition = new BoolPreCondition(true); 

                    }
                    break;
                case 5 :
                    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:112:4: 'false'
                    {
                    match(input,21,FOLLOW_21_in_term158); 
                     condition = new BoolPreCondition(false); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return condition;
    }
    // $ANTLR end "term"


    // $ANTLR start "unary"
    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:115:1: unary returns [ IPreCondition condition ] : ( '+' | '-' )* term ;
    public final IPreCondition unary() throws RecognitionException {
        IPreCondition condition = null;

        IPreCondition term7 = null;


        try {
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:116:2: ( ( '+' | '-' )* term )
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:116:4: ( '+' | '-' )* term
            {
             boolean positive=true; 
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:117:2: ( '+' | '-' )*
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==22) ) {
                    alt3=1;
                }
                else if ( (LA3_0==23) ) {
                    alt3=2;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:117:3: '+'
            	    {
            	    match(input,22,FOLLOW_22_in_unary195); 

            	    }
            	    break;
            	case 2 :
            	    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:117:9: '-'
            	    {
            	    match(input,23,FOLLOW_23_in_unary199); 
            	    positive = !positive ;

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            pushFollow(FOLLOW_term_in_unary206);
            term7=term();

            state._fsp--;


            		condition = term7;
            		if (!positive) {
            		  checkTypeInt(condition); //Must be sure this is a Numeric variable
            			condition = new NegationPreCondition(condition);
            		}		
            	

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return condition;
    }
    // $ANTLR end "unary"


    // $ANTLR start "mult"
    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:127:1: mult returns [ IPreCondition condition ] : op1= unary ( '*' op2= unary | '/' op2= unary | 'mod' op2= unary )* ;
    public final IPreCondition mult() throws RecognitionException {
        IPreCondition condition = null;

        IPreCondition op1 = null;

        IPreCondition op2 = null;


        try {
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:128:2: (op1= unary ( '*' op2= unary | '/' op2= unary | 'mod' op2= unary )* )
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:128:4: op1= unary ( '*' op2= unary | '/' op2= unary | 'mod' op2= unary )*
            {
            pushFollow(FOLLOW_unary_in_mult228);
            op1=unary();

            state._fsp--;

             condition = op1; 
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:131:2: ( '*' op2= unary | '/' op2= unary | 'mod' op2= unary )*
            loop4:
            do {
                int alt4=4;
                switch ( input.LA(1) ) {
                case 24:
                    {
                    alt4=1;
                    }
                    break;
                case 25:
                    {
                    alt4=2;
                    }
                    break;
                case 26:
                    {
                    alt4=3;
                    }
                    break;

                }

                switch (alt4) {
            	case 1 :
            	    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:131:5: '*' op2= unary
            	    {
            	    match(input,24,FOLLOW_24_in_mult250); 
            	    pushFollow(FOLLOW_unary_in_mult254);
            	    op2=unary();

            	    state._fsp--;

            	     checkTypeInt(op2); checkTypeInt(op1);
            	    	                      condition = new MultiplyPreCondition(condition,op2); 

            	    }
            	    break;
            	case 2 :
            	    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:133:5: '/' op2= unary
            	    {
            	    match(input,25,FOLLOW_25_in_mult263); 
            	    pushFollow(FOLLOW_unary_in_mult267);
            	    op2=unary();

            	    state._fsp--;

            	       checkTypeInt(op2); checkTypeInt(op1);
            	    	                      condition = new DividePreCondition(condition,op2); 

            	    }
            	    break;
            	case 3 :
            	    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:135:5: 'mod' op2= unary
            	    {
            	    match(input,26,FOLLOW_26_in_mult275); 
            	    pushFollow(FOLLOW_unary_in_mult279);
            	    op2=unary();

            	    state._fsp--;

            	     checkTypeInt(op2); checkTypeInt(op1);
            	    	                      condition = new ModPreCondition(condition,op2); 

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return condition;
    }
    // $ANTLR end "mult"


    // $ANTLR start "add"
    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:140:1: add returns [ IPreCondition condition ] : op1= mult ( '+' op2= mult | '-' op2= mult )* ;
    public final IPreCondition add() throws RecognitionException {
        IPreCondition condition = null;

        IPreCondition op1 = null;

        IPreCondition op2 = null;


        try {
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:141:2: (op1= mult ( '+' op2= mult | '-' op2= mult )* )
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:141:4: op1= mult ( '+' op2= mult | '-' op2= mult )*
            {
            pushFollow(FOLLOW_mult_in_add304);
            op1=mult();

            state._fsp--;

             condition = op1; 
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:142:2: ( '+' op2= mult | '-' op2= mult )*
            loop5:
            do {
                int alt5=3;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==22) ) {
                    alt5=1;
                }
                else if ( (LA5_0==23) ) {
                    alt5=2;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:142:4: '+' op2= mult
            	    {
            	    match(input,22,FOLLOW_22_in_add314); 
            	    pushFollow(FOLLOW_mult_in_add318);
            	    op2=mult();

            	    state._fsp--;

            	      checkTypeInt(op2); checkTypeInt(op1);
            	    	                   	   condition = new PlusPreCondition(condition,op2); 

            	    }
            	    break;
            	case 2 :
            	    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:144:6: '-' op2= mult
            	    {
            	    match(input,23,FOLLOW_23_in_add328); 
            	    pushFollow(FOLLOW_mult_in_add332);
            	    op2=mult();

            	    state._fsp--;

            	      checkTypeInt(op2); checkTypeInt(op1);
            	    	                       condition = new MinusPreCondition(condition,op2); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return condition;
    }
    // $ANTLR end "add"


    // $ANTLR start "relation"
    // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:149:1: relation returns [ IPreCondition condition ] : op1= add ( '=' op2= add | '!=' op2= add | '<' op2= add | '<=' op2= add | '>' op2= add | '>=' op2= add )* ;
    public final IPreCondition relation() throws RecognitionException {
        IPreCondition condition = null;

        IPreCondition op1 = null;

        IPreCondition op2 = null;


        try {
            // C:\\Documents and Settings\\Administrator\\workspace\\task-module\\src\\main\\java\\taskmodule\\conglogcompiler\\ConGlog.g:150:2: (op1= add ( '=' op2= add | '!=' op2= add | '<' op2= add | '<=' op2= add | '>' op2= add | '>=' op2= add )* )
